manifest/objects/MDPERSONATOR__MD_globalAddressResult__c.object
<CustomObject>
    <fields>
        <fullName>MDPERSONATOR__AddressKey__c</fullName>
        <label>AddressKey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__AddressLine1__c</fullName>
        <label>AddressLine1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__AddressLine2__c</fullName>
        <label>AddressLine2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__AddressLine3__c</fullName>
        <label>AddressLine3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__AddressType__c</fullName>
        <label>AddressType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__AdministrativeArea__c</fullName>
        <label>AdministrativeArea</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__Building__c</fullName>
        <label>Building</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__CountryISO3166_1_Alpha2__c</fullName>
        <label>CountryISO3166_1_Alpha2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__CountryISO3166_1_Alpha3__c</fullName>
        <label>CountryISO3166_1_Alpha3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__CountryISO3166_1_Numeric__c</fullName>
        <label>CountryISO3166_1_Numeric</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__CountryName__c</fullName>
        <label>CountryName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__CountrySubdivisionCode__c</fullName>
        <label>CountrySubdivisionCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__DependentLocality__c</fullName>
        <label>DependentLocality</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__DependentThoroughfareLeadingType__c</fullName>
        <label>DependentThoroughfareLeadingType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__DependentThoroughfareName__c</fullName>
        <label>DependentThoroughfareName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__DependentThoroughfarePostDirection__c</fullName>
        <label>DependentThoroughfarePostDirection</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__DependentThoroughfarePreDirection__c</fullName>
        <label>DependentThoroughfarePreDirection</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__DependentThoroughfareTrailingType__c</fullName>
        <label>DependentThoroughfareTrailingType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__DependentThoroughfare__c</fullName>
        <label>DependentThoroughfare</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__DoubleDependentLocality__c</fullName>
        <label>DoubleDependentLocality</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__FormattedAddress__c</fullName>
        <label>FormattedAddress</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__Latitude__c</fullName>
        <label>Latitude</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__Locality__c</fullName>
        <label>Locality</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__Longitude__c</fullName>
        <label>Longitude</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__Mapping__c</fullName>
        <label>Mapping</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__Organization__c</fullName>
        <label>Organization</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__PostBox__c</fullName>
        <label>PostBox</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__PostalCode__c</fullName>
        <label>PostalCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__PremisesNumber__c</fullName>
        <label>PremisesNumber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__PremisesType__c</fullName>
        <label>PremisesType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__RecordID__c</fullName>
        <label>RecordID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__Results__c</fullName>
        <label>Results</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__SubAdministrativeArea__c</fullName>
        <label>SubAdministrativeArea</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__SubNationalArea__c</fullName>
        <label>SubNationalArea</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__SubPremisesNumber__c</fullName>
        <label>SubPremisesNumber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__SubPremisesType__c</fullName>
        <label>SubPremisesType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__SubPremises__c</fullName>
        <label>SubPremises</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__ThoroughfareLeadingType__c</fullName>
        <label>ThoroughfareLeadingType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__ThoroughfareName__c</fullName>
        <label>ThoroughfareName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__ThoroughfarePostDirection__c</fullName>
        <label>ThoroughfarePostDirection</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__ThoroughfarePreDirection__c</fullName>
        <label>ThoroughfarePreDirection</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__ThoroughfareTrailingType__c</fullName>
        <label>ThoroughfareTrailingType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__Thoroughfare__c</fullName>
        <label>Thoroughfare</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Clean Suite Global Address Result</label>
    <nameField>
        <label>Clean Suite Global Address Result Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Clean Suite Global Address Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>